maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: value += is not a member of Int
      sommeAngle += 1
                 ^PledgeMaze:24: error: value += is not a member of Int
      sommeAngle += -1
                 ^PledgeMaze:29: error: value += is not a member of Int
        sommeAngle += -1
                   ^PledgeMaze:34: error: value += is not a member of Int
      sommeAngle += 1
                 ^